--- a/tasks/install-Debian.yml
+++ b/tasks/install-Debian.yml
@@ -10,7 +10,9 @@
   apt:
     name: "{{ autofs_packages }}"
     state: 'present'
-  when: ldap_domain.autofs_searchbase is defined
+  when:
+    - ldap_domain.autofs_searchbase is defined
+    - not ldap_disable_autofs
 
 - name: 'Place PAM config'
   copy:
