--- a/tasks/install-RedHat.yml
+++ b/tasks/install-RedHat.yml
@@ -9,4 +9,6 @@
   yum:
     name: "{{ autofs_packages }}"
     state: 'present'
-  when: ldap_domain.autofs_searchbase is defined
+  when:
+    - ldap_domain.autofs_searchbase is defined
+    - not ldap_disable_autofs
