--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -1,9 +1,47 @@
 ---
-# This is an example playbook to execute Ansible tests.
-
-- name: Verify
-  hosts: all
+- name: 'Verify'
+  hosts: 'all'
+  check_mode: true
+  gather_facts: false
+  vars:
+    users:
+      - { name: 'ldapuser', uid: 20041 }
   tasks:
-  - name: Example assertion
-    assert:
-      that: true
+    - name: 'Gather info on useraccounts'
+      user:
+        name: "{{ user.name }}"
+        state: 'present'
+        create_home: false
+        update_password: 'on_create'
+      register: 'users_info'
+      loop: "{{ users }}"
+      loop_control:
+        loop_var: 'user'
+
+    - name: 'Assert useraccounts'
+      assert:
+        that:
+          - "'{{ user_info[1]['name'] }}' == '{{ user_info[0]['user']['name'] }}'"
+          - "'{{ user_info[1]['uid'] }}' == '{{ user_info[0]['user']['uid'] }}'"
+      loop: "{{ users_info['results']|zip(users)|list }}"
+      loop_control:
+        loop_var: 'user_info'
+
+    - name: 'Test sudo permissions'
+      shell: sudo -n whoami
+      check_mode: false
+      ignore_errors: true
+      become: true
+      become_user: "{{ user.name }}"
+      loop: "{{ users }}"
+      loop_control:
+        loop_var: 'user'
+      register: 'sudo_results'
+
+    - name: 'Assert sudo permissions'
+      assert:
+        that:
+          - "'{{ sudo_result['stdout'] }}' == 'root'"
+      loop: "{{ sudo_results['results'] }}"
+      loop_control:
+        loop_var: 'sudo_result'
