--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -47,6 +47,7 @@
   loop_control:
     loop_var: 'service'
   ignore_errors: true
+  when: not ldap_disable_logind
 
 - name: 'Enable services - AutoFS'
   systemd:
