Made fact notation consistent with new approach

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,10 +1,10 @@
 ---
 - name: 'Include OS specific vars'
-  include_vars: "{{ ansible_os_family }}.yml"
+  include_vars: "{{ ansible_facts['os_family'] }}.yml"
   no_log: true
 
 - name: 'Install packages'
-  include_tasks: "install-{{ ansible_os_family }}.yml"
+  include_tasks: "install-{{ ansible_facts['os_family'] }}.yml"
 
 - name: 'Configure services'
   template:
