--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -14,7 +14,7 @@
   command: '/usr/sbin/pam-auth-update --force'
   environment:
     DEBIAN_FRONTEND: 'noninteractive'
-  when: ansible_os_family == "Debian"
+  when: ansible_facts['os_family'] == "Debian"
 
 - name: 'reconfigure redhat pam'
   command: "/usr/sbin/authconfig \
@@ -22,7 +22,7 @@
     --enablesssdauth --disableforcelegacy \
     --enablelocauthorize --enablemkhomedir \
     --enablepamaccess --updateall"
-  when: ansible_os_family == "RedHat"
+  when: ansible_facts['os_family'] == "RedHat"
 
 - name: 'clear sssd cache'
   command: '/usr/sbin/sss_cache -E'
