--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -29,19 +29,19 @@
         loop_var: 'dir'
 
     - name: 'Generate selfsigned SSL key'
-      openssl_privatekey:
+      community.crypto.openssl_privatekey:
         path: '/etc/ssl/private/ssl-cert-snakeoil.key'
         mode: 0644
         size: 2048
 
     - name: 'Generate selfsigned SSL CSR'
-      openssl_csr:
+      community.crypto.openssl_csr:
         path: '/etc/ssl/certs/ssl-cert-snakeoil.csr'
         privatekey_path: '/etc/ssl/private/ssl-cert-snakeoil.key'
         common_name: 'ldap1.example.com'
 
     - name: 'Generate selfsigned SSL cert'
-      openssl_certificate:
+      ocommunity.crypto.penssl_certificate:
         csr_path: '/etc/ssl/certs/ssl-cert-snakeoil.csr'
         path: '/etc/ssl/certs/ssl-cert-snakeoil.pem'
         privatekey_path: '/etc/ssl/private/ssl-cert-snakeoil.key'
@@ -62,7 +62,7 @@
         tasks_from: 'init_directory.yml'
 
     - name: 'Add test user'
-      ldap_entry:
+      community.general.ldap_entry:
         server_uri: 'ldap://localhost'
         start_tls: true
         bind_dn: "cn=admin,{{ ldap_domain['searchbase'] }}"
@@ -85,7 +85,7 @@
           userPassword: 'password'
 
     - name: 'Add test user to sudo group'
-      ldap_attr:
+      community.general.ldap_attr:
         server_uri: 'ldap://localhost'
         start_tls: true
         bind_dn: "cn=admin,{{ ldap_domain['searchbase'] }}"
