--- a/tasks/install_server.yml
+++ b/tasks/install_server.yml
@@ -49,7 +49,7 @@
   register: 'ldap_admin_password_hash'
 
 - name: 'Set admin passwords'
-  ldap_attr:
+  community.general.ldap_attr:
     server_uri: 'ldapi://'
     dn: "{{ adminpw }}"
     name: 'olcRootPW'
@@ -80,7 +80,7 @@
     loop_var: 'cert'
 
 - name: 'Generate DH parameters'
-  openssl_dhparam:
+  community.crypto.openssl_dhparam:
     path: '/etc/ldap/ssl/dhparams.pem'
     size: "{{ ldap_dhparams_size }}"
 
@@ -137,7 +137,7 @@
     LDAPTLS_REQCERT: 'never'
 
 - name: 'Enable LDAP modules'
-  ldap_entry:
+  community.general.ldap_entry:
     server_uri: 'ldap://localhost'
     start_tls: true
     bind_dn: 'cn=admin,cn=config'
